--- a/index.Rmd
+++ b/index.Rmd
@@ -60,15 +60,15 @@ Final Mark =0.6 $\times$ (HW) + 0.4 $\times$ (Exam)
 
 * (28.02.2019)
 
-### 8. Methods of phonetic investigation
+### 8. Perception
 
 * (07.03.2019)
 
-### 9. 
+### 9. Speech recognition and synthesis
 
 * (14.03.2019)
 
-### 10. On phonology/phonetics fieldwork
+### 10. Fieldwork. Phonological and phonetic description
 
 * (21.03.2019)
 
