add lec 9 links

--- a/docs/lec 9/19.03.21_Speech_recognition_history.tex
+++ b/docs/lec 9/19.03.21_Speech_recognition_history.tex
@@ -6,7 +6,7 @@
 	\usebeamerfont{footline}%
     \usebeamercolor[fg]{footline}%
     \hspace{1em}%
-    {{\small презентация доступна: \href{https://goo.gl/DUva6P}{\textbf{https://goo.gl/DUva6P}}}
+    {{\small презентация доступна: \href{https://tinyurl.com/y4fuuxt5}{\textbf{tinyurl.com/y4fuuxt5}}}
     \hspace{4cm}
     \insertframenumber/\inserttotalframenumber\vspace{0.5mm}}}
 \title[]{Computer Speech technologies}
