--- a/index.Rmd
+++ b/index.Rmd
@@ -69,7 +69,7 @@ Final Mark =0.6 $\times$ (HW) + 0.4 $\times$ (Exam)
 
 ### 9. Speech recognition and synthesis
 
-* (21.03.2019) [Lec 9]()
+* (21.03.2019) [Lec 9](https://github.com/agricolamz/2019_m_Instrumental_Phonetics/raw/master/docs/lec%209/19.03.21_Speech_recognition_history.pdf)
 
 ### 10. Fieldwork. Phonological and phonetic description
 
