add lec 9 links

--- a/docs/lec 9/19.03.21_Speech_recognition_history.tex
+++ b/docs/lec 9/19.03.21_Speech_recognition_history.tex
@@ -15,13 +15,85 @@
 \begin{document}
 \frame{\titlepage}
 
-\section{pre computer}
+\section{first attempts}
 
-\begin{frame}{Wolfgang Ritter von Kempelen}
+\begin{frame}{Wolfgang Ritter \href{https://books.google.ru/books?hl=pl&lr=&id=3MRJAAAAcAAJ&oi=fnd&pg=PA1&dq=Mechanismus+der+menschlichen+Sprache+nebst+Beschreibung+einer+sprechenden+Maschine&ots=MW2q1Xb0dG&sig=qwlXuPxE6P_Ruryv-FXckqV10Pk&redir_esc=y\#v=onepage&q=Mechanismus\%20der\%20menschlichen\%20Sprache\%20nebst\%20Beschreibung\%20einer\%20sprechenden\%20Maschine&f=false}{\cite[76]{kempelen91}}}
+\centering
+\includegraphics[width=0.45\linewidth]{01-kempelen}
+\end{frame}
+
+\begin{frame}{Wolfgang Ritter \href{https://books.google.ru/books?hl=pl&lr=&id=3MRJAAAAcAAJ&oi=fnd&pg=PA1&dq=Mechanismus+der+menschlichen+Sprache+nebst+Beschreibung+einer+sprechenden+Maschine&ots=MW2q1Xb0dG&sig=qwlXuPxE6P_Ruryv-FXckqV10Pk&redir_esc=y\#v=onepage&q=Mechanismus\%20der\%20menschlichen\%20Sprache\%20nebst\%20Beschreibung\%20einer\%20sprechenden\%20Maschine&f=false}{\cite[107]{kempelen91}}}
+\centering
+\includegraphics[width=0.45\linewidth]{02-kempelen}
+\end{frame}
+
+\begin{frame}{Wolfgang Ritter \href{https://books.google.ru/books?hl=pl&lr=&id=3MRJAAAAcAAJ&oi=fnd&pg=PA1&dq=Mechanismus+der+menschlichen+Sprache+nebst+Beschreibung+einer+sprechenden+Maschine&ots=MW2q1Xb0dG&sig=qwlXuPxE6P_Ruryv-FXckqV10Pk&redir_esc=y\#v=onepage&q=Mechanismus\%20der\%20menschlichen\%20Sprache\%20nebst\%20Beschreibung\%20einer\%20sprechenden\%20Maschine&f=false}{\cite[110]{kempelen91}}}
+\centering
+\includegraphics[width=0.45\linewidth]{03-kempelen}
+\end{frame}
+
+\begin{frame}{Wolfgang Ritter \href{https://books.google.ru/books?hl=pl&lr=&id=3MRJAAAAcAAJ&oi=fnd&pg=PA1&dq=Mechanismus+der+menschlichen+Sprache+nebst+Beschreibung+einer+sprechenden+Maschine&ots=MW2q1Xb0dG&sig=qwlXuPxE6P_Ruryv-FXckqV10Pk&redir_esc=y\#v=onepage&q=Mechanismus\%20der\%20menschlichen\%20Sprache\%20nebst\%20Beschreibung\%20einer\%20sprechenden\%20Maschine&f=false}{\cite[144]{kempelen91}}}
+\centering
+\includegraphics[width=\linewidth]{04-kempelen}
+\end{frame}
+
+\begin{frame}{W. R. von Kempelen: chess-playing ``automaton''}
+\centering
+\includegraphics[width=0.85\linewidth]{05-kempelen}
+\end{frame}
+
+\begin{frame}{Development of vowel production theory}
 \begin{itemize}
-\item \href{https://books.google.ru/books?hl=pl&lr=&id=3MRJAAAAcAAJ&oi=fnd&pg=PA1&dq=Mechanismus+der+menschlichen+Sprache+nebst+Beschreibung+einer+sprechenden+Maschine&ots=MW2q1Xb0dG&sig=qwlXuPxE6P_Ruryv-FXckqV10Pk&redir_esc=y\#v=onepage&q=Mechanismus\%20der\%20menschlichen\%20Sprache\%20nebst\%20Beschreibung\%20einer\%20sprechenden\%20Maschine&f=false}{\cite{kempelen91}}
+\item Christian Gottlieb von Kratzenstein
+\item W. Willis
+\item Sir Charles Wheatstone
+\item Hermann von Helmholtz
+\item L. Hermann
+\item Alexander Melville Bell and Alexander Graham Bell
 \end{itemize}
 \end{frame}
+
+\section{vocoder}
+\begin{frame}{Vocoder}
+\begin{itemize}
+\item In 1928 Bell Labs engineer Homer Dudley invented vocoder. \href{https://archive.org/stream/bellsystemtechni19amerrich/bellsystemtechni19amerrich\#page/495/mode/1up}{\cite[508]{dudley40}}.
+\end{itemize}
+\centering
+\includegraphics[width=\linewidth]{06-dudley}
+\end{frame}
+
+\section{vocoder}
+\begin{frame}{Vocoder}
+\begin{itemize}
+\item In 1928 Bell Labs engineer Homer Dudley invented vocoder. \href{https://archive.org/stream/bellsystemtechni19amerrich/bellsystemtechni19amerrich\#page/495/mode/1up}{\cite[509]{dudley40}}.
+\end{itemize}
+\centering
+\includegraphics[width=\linewidth]{07-dudley}
+\end{frame}
+
+\section{important inventions}
+\begin{frame}{Important inventions}
+\begin{itemize}
+\item Furier transform
+\item Linear predicting coding (LPC)
+\item Mel-frequency cepstrum (MFC)
+\item \href{http://stevehanov.ca/wavelet/}{Wavelets}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Wavelet: from Martti Vainio presentation 2017}
+\vfill
+\centering
+\includegraphics[width=\linewidth]{08-wavelet}
+\end{frame}
+
+\begin{frame}{Wavelet: from Martti Vainio presentation 2017}
+\vfill
+\centering
+\includegraphics[width=\linewidth]{09-wavelet}
+\end{frame}
+
+\section{speech recognition}
 
 \section{}
 \begin{frame}
