--- a/docs/lec 9/bibliography.bib
+++ b/docs/lec 9/bibliography.bib
@@ -1,6 +1,17 @@
+@article{dudley40,
+  title={The carrier nature of speech},
+  author={Dudley, Homer},
+  journal={Bell System Technical Journal},
+  volume={19},
+  number={4},
+  pages={495--515},
+  year={1940}
+}
+
 @book{kempelen91,
   title={Mechanismus der menschlichen Sprache},
-  author={Von Kempelen, Wolfgang},
+  author={von Kempelen, Wolfgang},
   year={1791},
   publisher={Degen}
 }
+
