add lec 9 prezi

--- a/docs/lec 9/19.03.21_Speech_recognition_history.tex
+++ b/docs/lec 9/19.03.21_Speech_recognition_history.tex
@@ -94,6 +94,33 @@
 \end{frame}
 
 \section{speech recognition}
+\begin{frame}{Everybody dreams about speech recognition...}
+\vfill
+\pause
+\includegraphics[width=\linewidth]{10-speech-recognition}
+A word hypothesis graph returned by the speech recognition component for the utterance ``how to recognize speech''. \hfill after \cite[119]{schroeder13}
+\end{frame}
+
+\begin{frame}{Speech recognition}
+\includegraphics[width=0.95\linewidth]{11-speech-recognition}
+after \cite[6]{gales07}\\
+
+\begin{itemize}
+\item Acoustic model: Hidden Markov Models or Deep Neural Network
+\item Pronunciation dictionary: Decision tree, Markov Chain model, \textit{N}-gram language models
+\item Language model: \textit{N}-gram models
+\end{itemize}
+\end{frame}
+
+\section{other technologies}
+\begin{frame}{Other Computer Speech technologies}
+\begin{itemize}
+\item Speech synthesis
+\item Speaker Identification
+\item Dialogue systems
+\item Prosody dependent tasks
+\end{itemize}
+\end{frame}
 
 \section{}
 \begin{frame}
