--- a/docs/lec 9/bibliography.bib
+++ b/docs/lec 9/bibliography.bib
@@ -15,3 +15,30 @@
   publisher={Degen}
 }
 
+@book{gales08,
+  title={The application of hidden Markov models in speech recognition},
+  author={Gales, Mark and Young, Steve},
+  journal={The {A}pplication of {H}idden {M}arkov {M}odels in {S}peech {R}ecognition},
+  address={Boston, Delft},
+  publisher = {Now Publishers}
+}
+
+@book{schroeder13,
+  title={Computer speech: recognition, compression, synthesis},
+  author={Schroeder, Manfred R.},
+  volume={35},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+
+@article{gales07,
+  title={The application of hidden Markov models in speech recognition},
+  author={Gales, Mark and Young, Steve},
+  journal={Foundations and Trends{\textregistered} in Signal Processing},
+  volume={1},
+  number={3},
+  pages={195--304},
+  year={2007}
+}
+
